@@ -86,7 +86,7 @@ int get_entity_sensor_name_string (pstdout_state_t pstate,
                                    char *sensor_name_buf,
                                    unsigned int sensor_name_buf_len);
 
-int list_sensor_types (pstdout_state_t pstate);
+int list_sensor_types (void);
 
 /* 1 if all valid, 0 if not, -1 on error */
 int valid_sensor_types (pstdout_state_t pstate,
